--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="robots" content="noindex, nofollow">
     <meta content="#b3bb4b" name="theme-color">
-    <link rel="apple-touch-icon" href="./assets/img/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="./assets/img/apple-touch-icon.jpg">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon-16x16.png">
     <link href="./assets/site.webmanifest" rel="manifest">
